--- a/includes/dreport.html
+++ b/includes/dreport.html
@@ -25,7 +25,7 @@
                         <li><i class="Small material-icons blue-text">equalizer</i>Impact ratio is {{user.badgeratio.toFixed(2)}} is {{myadjlist[0]}} (avg:{{bpArray[0][0].toFixed(2)}}, avghigh:{{bpArray[0][3].toFixed(2)}}, avglow:{{bpArray[0][1].toFixed(2)}})</li>
                         <li><i class="Small material-icons light-green-text">insert_chart</i>Total XP {{user.pointstotal}} is {{myadjlist[1]}} (avg:{{bpArray[1][0].toFixed(1)}}, avglow:{{bpArray[1][3].toFixed(1)}}, avghigh:{{bpArray[1][1].toFixed(1)}})</li>
                         <li><i class="Small material-icons orange-text">chat_bubble</i>Daily XP {{user.dailytotal}} is {{myadjlist[2]}} (avg:{{bpArray[2][0].toFixed(1)}}, avglow:{{bpArray[2][3].toFixed(1)}}, avghigh:{{bpArray[2][1].toFixed(1)}})</li>
-                        <li><i class="Small material-icons pink-text">create</i> {{readonly.settings.quizname}} {{user.dailytotal}} is {{myadjlist[3]}} (avg:{{bpArray[3][0].toFixed(1)}}, avglow:{{bpArray[3][3].toFixed(1)}}, avghigh:{{bpArray[3][1].toFixed(1)}})</li>
+                        <li><i class="Small material-icons pink-text">create</i> {{readonly.settings.quizname}} {{user.quiztotal}} is {{myadjlist[3]}} (avg:{{bpArray[3][0].toFixed(1)}}, avglow:{{bpArray[3][3].toFixed(1)}}, avghigh:{{bpArray[3][1].toFixed(1)}})</li>
                     </ul>
                 </div>
             </div>
