--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -25,7 +25,8 @@
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'badgestotal')">Badges</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'quiztotal')">Quizzes</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'pointstotal')">Points</a>  |
-            		<a href="#!" id="sorter" ng-click="sortUser(listArray,'confirmed')">Unconfirmed</a>
+            		<a href="#!" id="sorter" ng-click="sortUser(listArray,'confirmed')">Unconfirmed</a> |
+			<a href="#modalcsv" ng-click="makeCSV()" class="modal-action modal-trigger">CSV</a>
 		</td>
 	</tr>
     <!--
